let's say it is better